--- a/src/scss/layout/App.module.scss
+++ b/src/scss/layout/App.module.scss
@@ -6,7 +6,7 @@
 
 .Testimonial {
   &Container {
-    max-width: 80rem;
+    max-width: 110rem;
     display: grid;
     grid-template-areas:
       'first first second third'
@@ -17,29 +17,49 @@
   &Card {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
+    gap: 1.6rem;
     border-radius: 6px;
-    padding: 1.5rem 1.875rem;
+    padding: 2.4rem 3rem;
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
   }
 
   &Card:first-child {
     grid-area: first;
     background-color: var(--moderate-violet);
+    position: relative;
+
+    &::after {
+      content: '';
+      background-image: url('../../assets/svg/bg-pattern-quotation.svg');
+      position: absolute;
+      top: 0;
+      right: 14%;
+      width: 104px;
+      height: 102px;
+      z-index: 1;
+    }
+
+    .UserAvatar {
+      border: 1.4px solid var(--light-violet) !important;
+    }
   }
 
   &Card:nth-child(2) {
     grid-area: second;
     background-color: var(--very-dark-grayish-blue);
+    width: 255px;
   }
 
   &Card:nth-child(3) {
     grid-area: third;
     background-color: var(--white);
+    width: 255px;
   }
 
   &Card:nth-child(4) {
     grid-area: fourth;
     background-color: var(--white);
+    width: 255px;
   }
 
   &Card:last-child {
