--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -7,6 +7,8 @@
   // Colors Neutral
   --light-gray: hsl(0, 0%, 81%);
   --light-grayish-blue: hsl(210, 46%, 95%);
+  --light-gray-medium: hsl(220, 7%, 53%);
+  --light-violet: hsl(264, 82%, 70%);
   //Fonts
   --font-primary: 'Barlow Semi Condensed', sans-serif;
 }
