--- a/src/scss/layout/TestimonialCard.module.scss
+++ b/src/scss/layout/TestimonialCard.module.scss
@@ -1,3 +1,72 @@
+.Testimonial {
+  &Card {
+    display: flex;
+    flex-direction: column;
+    gap: 1.6rem;
+    padding: 2.4rem 3rem;
+
+    &-0 {
+      .User {
+        &Avatar {
+          border: 1.4px solid var(--light-violet);
+        }
+
+        &Message {
+          color: var(--light-violet);
+        }
+      }
+    }
+
+    &-1 {
+      .User {
+        &Avatar {
+        }
+
+        &Message {
+          color: var(--light-gray);
+        }
+      }
+    }
+
+    &-2,
+    &-3 {
+      .User {
+        &Avatar {
+          border: 1.4px solid var(--white);
+        }
+
+        &Name {
+          color: var(--very-dark-grayish-blue);
+        }
+
+        &Message {
+          color: hsl(240, 1%, 68%);
+        }
+      }
+
+      .Testimonial {
+        &Title {
+          color: var(--very-dark-grayish-blue);
+        }
+
+        &Text {
+          color: hsl(220, 1%, 51%);
+        }
+      }
+    }
+
+    &-4 {
+      .UserAvatar {
+        border: 1.4px solid var(--light-violet);
+      }
+      .UserMessage,
+      .TestimonialText {
+        color: var(--light-gray-medium);
+      }
+    }
+  }
+}
+
 .User {
   display: flex;
   column-gap: 15px;
@@ -13,8 +82,7 @@
     line-height: 1.6rem;
   }
 
-  span {
-    color: var(--light-gray);
+  &Message {
     font-size: 1.2rem;
   }
 
@@ -37,7 +105,6 @@
 
   &Text {
     color: var(--light-gray);
-    font-weight: 500;
     line-height: 1.8rem;
     letter-spacing: 0.039px;
   }
