--- a/src/scss/layout/App.module.scss
+++ b/src/scss/layout/App.module.scss
@@ -2,6 +2,11 @@
   min-height: 100vh;
   display: grid;
   place-items: center;
+  padding: 50px 15px;
+
+  @media screen and (max-width: 750px) {
+    padding: 74px 24px;
+  }
 }
 
 .Testimonial {
@@ -12,12 +17,32 @@
       'first first second third'
       'fourth fifth fifth third';
     gap: 30px;
+
+    @media screen and (max-width: 1100px) {
+      grid-template-areas:
+        'first first second'
+        'fourth fifth fifth'
+        'third third third';
+    }
+
+    @media screen and (max-width: 750px) {
+      grid-template-areas:
+        'first'
+        'second'
+        'fourth'
+        'fifth'
+        'third';
+    }
   }
 
   &Card {
     border-radius: 6px;
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.15);
     width: 255px;
+
+    @media screen and (max-width: 1100px) {
+      width: unset;
+    }
   }
 
   &Card:first-child {
