--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -6,6 +6,7 @@ body {
   font-size: 1.3rem;
   font-family: var(--font-primary);
   overflow-x: hidden;
+  background-color: var(--light-grayish-blue);
 }
 a {
   text-decoration: none;
